@@ -48,27 +48,30 @@ import org.scilab.forge.jlatexmath.TeXIcon;
  * A class to test LaTeX rendering.
  **/
 public class Example6 {
-    public static void main(String[] args) {
-        
-        String latex = "\\begin{array}{cc}";
-	latex += "\\fbox{\\text{A framed box with \\textdbend}}&\\shadowbox{\\text{A shadowed box}}\\cr";
-	latex += "\\doublebox{\\text{A double framed box}}&\\ovalbox{\\text{An oval framed box}}\\cr";
-	latex += "\\end{array}";
+	public static void main(String[] args) {
 
-        TeXFormula formula = new TeXFormula(latex);
-        TeXIcon icon = formula.createTeXIcon(TeXConstants.STYLE_DISPLAY, 30);
-        icon.setInsets(new Insets(5, 5, 5, 5));
-        
-        BufferedImage image = new BufferedImage(icon.getIconWidth(), icon.getIconHeight(), BufferedImage.TYPE_INT_ARGB);
-        Graphics2D g2 = image.createGraphics();
-        g2.setColor(Color.white);
-        g2.fillRect(0,0,icon.getIconWidth(),icon.getIconHeight());
-        JLabel jl = new JLabel();
-        jl.setForeground(new Color(0, 0, 0));
-        icon.paintIcon(jl, g2, 0, 0);
-        File file = new File("Example6.png");
-        try {
-            ImageIO.write(image, "png", file.getAbsoluteFile());
-        } catch (IOException ex) {}
-    }    
+		String latex = "\\begin{array}{cc}";
+		latex += "\\fbox{\\text{A framed box with \\textdbend}}&\\shadowbox{\\text{A shadowed box}}\\cr";
+		latex += "\\doublebox{\\text{A double framed box}}&\\ovalbox{\\text{An oval framed box}}\\cr";
+		latex += "\\end{array}";
+
+		TeXFormula formula = new TeXFormula(latex);
+		// Note: Old interface for creating icons:
+		//TeXIcon icon = formula.createTeXIcon(TeXConstants.STYLE_DISPLAY, 30);
+		// Note: New interface using builder pattern (inner class):
+		TeXIcon icon = formula.new TeXIconBuilder().setStyle(TeXConstants.STYLE_DISPLAY).setSize(30).build();
+		icon.setInsets(new Insets(5, 5, 5, 5));
+
+		BufferedImage image = new BufferedImage(icon.getIconWidth(), icon.getIconHeight(), BufferedImage.TYPE_INT_ARGB);
+		Graphics2D g2 = image.createGraphics();
+		g2.setColor(Color.white);
+		g2.fillRect(0,0,icon.getIconWidth(),icon.getIconHeight());
+		JLabel jl = new JLabel();
+		jl.setForeground(new Color(0, 0, 0));
+		icon.paintIcon(jl, g2, 0, 0);
+		File file = new File("Example6.png");
+		try {
+			ImageIO.write(image, "png", file.getAbsoluteFile());
+		} catch (IOException ex) {}
+	}    
 }
