@@ -48,24 +48,35 @@ import org.scilab.forge.jlatexmath.TeXIcon;
  * A class to test LaTeX rendering.
  **/
 public class Example7 {
-    public static void main(String[] args) {
-        
-        String latex = "\\mbox{abc abc abc abc abc abc abc abc abc abc abc abc abc abc\\\\abc abc abc abc abc abc abc\\\\abc abc abc abc abc abc abc}\\\\1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1";
-	TeXFormula formula = new TeXFormula(latex);
-	formula.setDEBUG(true);
-        TeXIcon icon = formula.createTeXIcon(TeXConstants.STYLE_DISPLAY, 30, TeXConstants.UNIT_CM, 4, TeXConstants.ALIGN_LEFT, TeXConstants.UNIT_CM, 0.5f);
-        icon.setInsets(new Insets(5, 5, 5, 5));
-        
-        BufferedImage image = new BufferedImage(icon.getIconWidth(), icon.getIconHeight(), BufferedImage.TYPE_INT_ARGB);
-        Graphics2D g2 = image.createGraphics();
-        g2.setColor(Color.white);
-        g2.fillRect(0,0,icon.getIconWidth(),icon.getIconHeight());
-        JLabel jl = new JLabel();
-        jl.setForeground(new Color(0, 0, 0));
-        icon.paintIcon(jl, g2, 0, 0);
-        File file = new File("Example7.png");
-        try {
-            ImageIO.write(image, "png", file.getAbsoluteFile());
-        } catch (IOException ex) {}
-    }    
+	public static void main(String[] args) {
+
+		String latex = "\\mbox{abc abc abc abc abc abc abc abc abc abc abc abc abc abc\\\\abc abc abc abc abc abc abc\\\\abc abc abc abc abc abc abc}\\\\1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1";
+		TeXFormula formula = new TeXFormula(latex);
+		formula.setDEBUG(true);
+		
+		// Note: Old interface for creating icons:
+		//TeXIcon icon = formula.createTeXIcon(TeXConstants.STYLE_DISPLAY, 30, TeXConstants.UNIT_CM, 4, TeXConstants.ALIGN_LEFT, TeXConstants.UNIT_CM, 0.5f);
+		// Note: New interface using builder pattern (inner class):
+		TeXIcon icon = formula.new TeXIconBuilder()
+				.setStyle(TeXConstants.STYLE_DISPLAY)
+				.setSize(30)
+				.setWidth(TeXConstants.UNIT_CM, 4, TeXConstants.ALIGN_LEFT)
+				.setInterLineSpacing(TeXConstants.UNIT_CM, 0.5f)
+				.build();
+				
+
+		icon.setInsets(new Insets(5, 5, 5, 5));
+
+		BufferedImage image = new BufferedImage(icon.getIconWidth(), icon.getIconHeight(), BufferedImage.TYPE_INT_ARGB);
+		Graphics2D g2 = image.createGraphics();
+		g2.setColor(Color.white);
+		g2.fillRect(0,0,icon.getIconWidth(),icon.getIconHeight());
+		JLabel jl = new JLabel();
+		jl.setForeground(new Color(0, 0, 0));
+		icon.paintIcon(jl, g2, 0, 0);
+		File file = new File("Example7.png");
+		try {
+			ImageIO.write(image, "png", file.getAbsoluteFile());
+		} catch (IOException ex) {}
+	}    
 }
